<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/news" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/travel_map" />

    <item
        android:id="@+id/placeholder"
        android:title="" />
    <item
        android:id="@+id/navigation_invite"
        android:icon="@drawable/ic_baseline_person_add_alt_1_24"
        android:title="@string/invite_friend" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />

</menu>