<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.together.features.home.ui.home.NewsFragment"
        android:label="@string/title_travels"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.together.features.home.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_invite"
        android:name="com.example.together.features.home.ui.invote.InviteFragment"
        android:label="@string/invite_friend"
        tools:layout="@layout/invite_fragment" />
    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.together.features.home.ui.map.MapsFragment"
        android:label="@string/travel_map"
        tools:layout="@layout/fragment_maps" />
</navigation>